--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 example{
-    
+    box-sizing: border-box;
 }
 img{
     width: 300px;
